traversal.snake.Snake.scala.error
Compilation error:
Snake:45: error: Unmatched closing brace '}' ignored here
}
^